Integrate Firebase Storage for cloned voices

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage-compat.js"></script>
   <style>
     :root {
       --amarillo-principal: #FFB800;
@@ -3548,6 +3549,7 @@
     }
 
     async function deleteDocumento(id) {
+      const existingDoc = id ? await getDocumento(id) : null;
       const db = await openDB();
       const tx = db.transaction('documentos', 'readwrite');
       const delReq = tx.objectStore('documentos').delete(id);
@@ -3557,6 +3559,14 @@
         delReq.onsuccess = () => tx.oncomplete = async () => {
           if (shouldSync) {
             try {
+              if (existingDoc?.audioUrl && isFirebaseAvailable() && firebase.storage) {
+                try {
+                  const storageRef = firebase.storage().refFromURL(existingDoc.audioUrl);
+                  await storageRef.delete();
+                } catch (error) {
+                  console.warn('⚠️ No se pudo eliminar el audio asociado en Storage', error);
+                }
+              }
               await deleteFirestoreDocument(currentUser?.uid, id);
             } catch (error) {
               console.error('No se pudo eliminar en Firestore', error);
@@ -5317,12 +5327,14 @@
       const safeName = voiceData.nombre || 'Mi Voz Clonada';
       let audioContentType = voiceData.audioContentType || voiceData.mimeType || 'audio/wav';
       let audioBase64 = voiceData.audioBase64 || voiceData.audioDataUrl || voiceData.audio;
-      const createdAt = voiceData.createdAt || Date.now();
+      const createdAt = voiceData.createdAt?.toDate?.()?.getTime?.() || voiceData.createdAt?.toMillis?.() || voiceData.createdAt || Date.now();
+      let audioBlob = voiceData.audioBlob instanceof Blob ? voiceData.audioBlob : null;
 
-      if (!audioBase64 && voiceId) {
+      if (!audioBase64 && !audioBlob && voiceId) {
         try {
           const storedVoice = await getVoiceFromIndexedDB(voiceId);
           if (storedVoice?.audioBlob) {
+            audioBlob = storedVoice.audioBlob;
             audioContentType = storedVoice.audioBlob.type || audioContentType;
             audioBase64 = await blobToDataUrl(storedVoice.audioBlob);
           }
@@ -5331,24 +5343,56 @@
         }
       }
 
+      if (!audioBase64 && !audioBlob && voiceData.storageURL && isFirebaseAvailable() && loadSyncPreference() && !isGuestMode) {
+        try {
+          const response = await fetch(voiceData.storageURL);
+          if (!response.ok) throw new Error(`HTTP ${response.status}`);
+          const remoteBlob = await response.blob();
+          audioBlob = remoteBlob;
+          audioContentType = remoteBlob.type || audioContentType;
+          audioBase64 = await blobToDataUrl(remoteBlob);
+
+          await saveVoiceToIndexedDB({
+            id: voiceId,
+            userId: voiceData.userId || currentUser?.uid || 'guest',
+            audioBlob: remoteBlob,
+            nombre: safeName,
+            desc: voiceData.desc || 'Voz personalizada • Tu voz',
+            avatar: voiceData.avatar || 'https://i.pravatar.cc/150?img=68',
+            googleVoice: voiceData.googleVoice || 'es-ES-Neural2-C',
+            languageCode: voiceData.languageCode || 'es-ES',
+            gender: voiceData.gender || 'NEUTRAL',
+            createdAt,
+            storageURL: voiceData.storageURL,
+            audioContentType: audioContentType
+          });
+        } catch (error) {
+          console.error('❌ No se pudo descargar la voz clonada desde Storage', error);
+        }
+      }
+
+      if (!audioBase64 && voiceData.audioURL) {
+        audioBase64 = await fetchAudioDataUrlFromUrl(voiceData.audioURL, audioContentType);
+      }
+
       if (audioBase64 && voiceId) {
         try {
-          const audioBlob = voiceData.audioBlob instanceof Blob
-            ? voiceData.audioBlob
-            : dataUrlToBlob(audioBase64, audioContentType);
+          const audioBlobToStore = audioBlob || dataUrlToBlob(audioBase64, audioContentType);
 
-          if (audioBlob) {
+          if (audioBlobToStore) {
             await saveVoiceToIndexedDB({
               id: voiceId,
               userId: voiceData.userId || currentUser?.uid || 'guest',
-              audioBlob,
+              audioBlob: audioBlobToStore,
               nombre: safeName,
               desc: voiceData.desc || 'Voz personalizada • Tu voz',
               avatar: voiceData.avatar || 'https://i.pravatar.cc/150?img=68',
               googleVoice: voiceData.googleVoice || 'es-ES-Neural2-C',
               languageCode: voiceData.languageCode || 'es-ES',
               gender: voiceData.gender || 'NEUTRAL',
-              createdAt
+              createdAt,
+              storageURL: voiceData.storageURL,
+              audioContentType: audioContentType
             });
           }
         } catch (error) {
@@ -5368,7 +5412,8 @@
         isCloned: true,
         audioBase64,
         audioURL: voiceData.audioURL,
-        audioContentType: audioContentType
+        audioContentType: audioContentType,
+        storageURL: voiceData.storageURL
       };
 
       upsertClonedVoiceConfig(voice);
@@ -5534,30 +5579,160 @@
           googleVoice: voiceData?.googleVoice || 'es-ES-Neural2-C',
           languageCode: voiceData?.languageCode || 'es-ES',
           gender: voiceData?.gender || 'NEUTRAL',
-          createdAt
+          createdAt,
+          audioContentType: mimeType
         };
 
         await saveVoiceToIndexedDB(voiceToStore);
 
-        if (isFirebaseAvailable() && userId && loadSyncPreference()) {
-          await firebase.firestore().collection('users').doc(userId).set({
-            clonedVoice: {
-              voiceId,
-              nombre: voiceToStore.nombre,
-              desc: voiceToStore.desc,
-              avatar: voiceToStore.avatar,
-              languageCode: voiceToStore.languageCode,
-              gender: voiceToStore.gender,
-              createdAt: firebase.firestore.FieldValue.serverTimestamp(),
-              storageType: 'local'
-            }
-          }, { merge: true });
+        if (!isFirebaseAvailable() || !userId || !loadSyncPreference() || isGuestMode) {
+          return { voiceId, mimeType, audioBlob: storedBlob };
         }
 
-        return { voiceId, mimeType, audioBlob: storedBlob };
+        const storage = firebase.storage?.();
+        if (!storage) {
+          throw new Error('Firebase Storage no está disponible');
+        }
+
+        const storagePath = `users/${userId}/clonedVoices/${voiceId}.webm`;
+        const storageRef = storage.ref(storagePath);
+        const uploadTask = storageRef.put(storedBlob, { contentType: mimeType });
+        const progressCallback = typeof voiceData.onUploadProgress === 'function' ? voiceData.onUploadProgress : null;
+
+        return await new Promise((resolve, reject) => {
+          uploadTask.on('state_changed', (snapshot) => {
+            if (progressCallback && snapshot?.totalBytes) {
+              const progress = Math.round((snapshot.bytesTransferred / snapshot.totalBytes) * 100);
+              progressCallback(progress);
+            }
+          }, (error) => {
+            console.error('❌ Error subiendo la voz a Storage', error);
+            reject(error);
+          }, async () => {
+            try {
+              const downloadURL = await uploadTask.snapshot.ref.getDownloadURL();
+              const metadata = {
+                voiceId,
+                nombre: voiceToStore.nombre,
+                desc: voiceToStore.desc,
+                avatar: voiceToStore.avatar,
+                languageCode: voiceToStore.languageCode,
+                gender: voiceToStore.gender,
+                storageURL: downloadURL,
+                audioContentType: mimeType,
+                createdAt: firebase.firestore.FieldValue.serverTimestamp()
+              };
+
+              await firebase.firestore()
+                .collection('users')
+                .doc(userId)
+                .collection('clonedVoices')
+                .doc(voiceId)
+                .set(metadata);
+
+              await saveVoiceToIndexedDB({ ...voiceToStore, storageURL: downloadURL });
+
+              resolve({ voiceId, mimeType, audioBlob: storedBlob, downloadURL });
+            } catch (error) {
+              console.error('❌ No se pudo guardar metadata de la voz clonada', error);
+              reject(error);
+            }
+          });
+        });
       } catch (error) {
         console.error('❌ No se pudo guardar la voz clonada en Firestore', error);
         throw error;
+      }
+    }
+
+    async function loadUserClonedVoices(userId) {
+      if (!userId || !isFirebaseAvailable() || !loadSyncPreference()) return [];
+      try {
+        const snapshot = await firebase.firestore()
+          .collection('users')
+          .doc(userId)
+          .collection('clonedVoices')
+          .orderBy('createdAt', 'desc')
+          .get();
+
+        const voices = [];
+
+        for (const doc of snapshot.docs) {
+          const data = doc.data() || {};
+          const createdAt = data.createdAt?.toDate?.()?.getTime?.() || data.createdAt?.toMillis?.() || Date.now();
+          const appliedVoice = await applyClonedVoiceConfig({
+            ...data,
+            voiceId: data.voiceId || doc.id,
+            id: data.voiceId || doc.id,
+            userId,
+            createdAt
+          });
+          if (appliedVoice) voices.push(appliedVoice);
+        }
+
+        renderVoices();
+        return voices;
+      } catch (error) {
+        console.error('❌ No se pudieron cargar las voces clonadas del usuario', error);
+        return [];
+      }
+    }
+
+    async function deleteClonedVoice(userId, voiceId) {
+      if (!voiceId) return false;
+      let voiceName = null;
+      try {
+        const storedVoice = await getVoiceFromIndexedDB(voiceId);
+        voiceName = storedVoice?.nombre || voiceName;
+        const storedURL = storedVoice?.storageURL;
+        await deleteVoiceFromIndexedDB(voiceId);
+
+        if (isFirebaseAvailable() && userId && loadSyncPreference()) {
+          try {
+            const docRef = firebase.firestore()
+              .collection('users')
+              .doc(userId)
+              .collection('clonedVoices')
+              .doc(voiceId);
+            const docSnap = await docRef.get();
+            const docData = docSnap.data();
+            const storageURL = docData?.storageURL || storedURL;
+
+            if (storageURL && firebase.storage) {
+              try {
+                const storageRef = firebase.storage().refFromURL(storageURL);
+                await storageRef.delete();
+              } catch (error) {
+                console.warn('⚠️ No se pudo eliminar el archivo de Storage', error);
+              }
+            } else if (firebase.storage) {
+              try {
+                await firebase.storage().ref(`users/${userId}/clonedVoices/${voiceId}.webm`).delete();
+              } catch (error) {
+                console.warn('⚠️ No se pudo eliminar el archivo de Storage (fallback)', error);
+              }
+            }
+
+            await docRef.delete();
+          } catch (error) {
+            console.error('❌ Error eliminando voz clonada en Firebase', error);
+          }
+        }
+
+        const voiceIndex = VOICES_DATA.findIndex((v) => v.voiceId === voiceId || v.id === voiceId || (voiceName && v.nombre === voiceName));
+        if (voiceIndex >= 0) VOICES_DATA.splice(voiceIndex, 1);
+        if (voiceName && VOICE_CONFIG[voiceName]) delete VOICE_CONFIG[voiceName];
+
+        const storedLocalVoice = getLocalClonedVoice();
+        if (storedLocalVoice?.voiceId === voiceId || storedLocalVoice?.id === voiceId) {
+          localStorage.removeItem(CLONED_VOICE_STORAGE_KEY);
+        }
+
+        renderVoices();
+        return true;
+      } catch (error) {
+        console.error('❌ No se pudo eliminar la voz clonada', error);
+        return false;
       }
     }
 
@@ -5570,7 +5745,9 @@
         huggingFaceToken = data.hfToken || data.huggingFaceToken || await getUserHFToken(userId) || getGuestHFToken();
         setVoiceSystem(userGoogleTTSKey ? 'google' : 'browser');
         const prefs = data.preferences || {};
-        if (data.clonedVoice) {
+        if (loadSyncPreference()) {
+          await loadUserClonedVoices(userId);
+        } else if (data.clonedVoice) {
           await applyClonedVoiceConfig(data.clonedVoice);
         }
         if (prefs.voice) {
